# OOP-Project-mine

./: .gitignore  CMakeLists.txt  README.md
MS1/: CMakeLists.txt  Date.cpp  Date.h  Menu.cpp  Menu.h  Utils.cpp  Utils.h  dateTester.cpp  menuTester.cpp  ms1_tester.cpp
MS2/: CMakeLists.txt  LibApp.cpp  LibApp.h  Utils.h
MS3/: CMakeLists.txt  Date.cpp  Date.h  Lib.h  Publication.cpp  Publication.h  Streamable.cpp  Streamable.h  ms3.vcxproj  ms3_tester.cpp
MS4/: Book.cpp  Book.h  CMakeLists.txt  Menu.cpp  Publication.cpp  Publication.h  Streamable.cpp  Utils.cpp  Utils.h  ms4_tester.cpp
MS5/: Book.h  CMakeLists.txt  Date.h  LibApp.cpp  LibApp.h  LibAppMain.cpp  Menu.h  Publication.cpp  Utils.cpp  Utils.h  pubSel_Tester.cpp
SenecaLibraryApplication/: Book.cpp  Lib.h  Menu.h  Publication.cpp  Utils.cpp  Utils.h
